// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextIcon renders with different color 1`] = `
<div>
  <Styled(ItemExtra)>
    <Styled(Icon)
      color="blue"
      name="heart outline"
      size="big"
    />
    0
  </Styled(ItemExtra)>
</div>
`;

exports[`TextIcon renders with different icon 1`] = `
<div>
  <Styled(ItemExtra)>
    <Styled(Icon)
      color="red"
      name="shield"
      size="big"
    />
    0
  </Styled(ItemExtra)>
</div>
`;

exports[`TextIcon renders with different number 1`] = `
<div>
  <Styled(ItemExtra)>
    <Styled(Icon)
      color="red"
      name="heart outline"
      size="big"
    />
    <styled.div
      color="red"
    >
      4
    </styled.div>
  </Styled(ItemExtra)>
</div>
`;

exports[`TextIcon renders with no props 1`] = `
<div>
  <Styled(ItemExtra)>
    <Styled(Icon)
      color="red"
      name="heart outline"
      size="big"
    />
    0
  </Styled(ItemExtra)>
</div>
`;
